--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -7,41 +7,14 @@
     libraries around.
   </p>
 
-  <ul class="list-inline social-buttons">
-    <li>
-      <iframe 
-        src="http://ghbtns.com/github-btn.html?user=ngbp&amp;repo=ngbp&amp;type=watch&amp;count=true" 
-        allowtransparency="true" 
-        frameborder="0" 
-        scrolling="0" 
-        width="110" 
-        height="20">
-      </iframe>
-    </li>
-    <li>
-      <iframe 
-        src="http://ghbtns.com/github-btn.html?user=ngbp&amp;repo=ngbp&amp;type=fork&amp;count=true" 
-        allowtransparency="true" 
-        frameborder="0" 
-        scrolling="0" 
-        width="95" 
-        height="20">
-      </iframe>
-    </li>
-    <li>
-       <iframe allowtransparency="true" frameborder="0" scrolling="no"
-        src="https://platform.twitter.com/widgets/tweet_button.html?url=http%3A%2F%2Fbit.ly%2FngBoilerplate&counturl=http%3A%2F%2Fngbp.github.com%2Fngbp&text=Check%20out%20%23ngbp%20-%20an%20awesome%20kickstarter%20for%20web%20projects%20%7C&hashtags=angularjs&via=joshdmiller&related=joshdmiller"
-        style="width:130px; height:20px;"></iframe>
-    </li>
-    <li plus-one></li>
-  </ul> 
+  <br>  
   
   <div class="btn-group">
-    <a href="https://github.com/ngbp/ngbp#readme" class="btn btn-large btn-default">
+    <a href="https://github.com/data-visualization-capstone/web#readme" class="btn btn-large btn-default">
       <i class="fa fa-book"></i>
       Read the Docs
     </a>
-    <a href="https://github.com/ngbp/ngbp" class="btn btn-large btn-success">
+    <a href="https://github.com/data-visualization-capstone/web" class="btn btn-large btn-success">
       <i class="fa fa-download"></i>
       Download
     </a>
