--- a/src/less/main.less
+++ b/src/less/main.less
@@ -14,12 +14,10 @@
 
 
 /**
- * This is our main variables file. We must include it last so we can overwrite any variable
- * definitions in our imported stylesheets.
+ * Variables
  */
 
-@import 'variables.less';
-
+@sansFontFamily: 'Roboto', sans-serif;
 
 /**
  * Typography
