--- a/src/app/map/map.tpl.html
+++ b/src/app/map/map.tpl.html
@@ -3,5 +3,21 @@
   <h1 class="page-header">
     MAP STUFF.
     <small>yeah.</small>
+
+  <div id='map' style=""></div>
+  <div id='selections' class="selections">
+    <a href='#' class="show">Choose what supermarkets to display</a>
+    <div class='content'>
+      <a href='#' class="hide">Hide</a>
+      <div id="toggles">
+      </div>
+    </div>
+  </div>
+  <div id='loading'>
+  </div>
+  <div id='selected'>
+    <h1>Explore supermarkets in the UK</h1>
+  </div>
+
   </h1>
 </div>
