Make map into full-page background

--- a/src/app/map/map.tpl.html
+++ b/src/app/map/map.tpl.html
@@ -1,12 +1,11 @@
 
 <div class="row">
   <h1 class="page-header">
-    MAP STUFF.
-    <small>yeah.</small>
+    <p>Check this map!</p>
 
   <div id='map' style=""></div>
   <div id='selections' class="selections">
-    <a href='#' class="show">Choose what supermarkets to display</a>
+    <a href='#' class="show">Choose what data to display</a>
     <div class='content'>
       <a href='#' class="hide">Hide</a>
       <div id="toggles">
@@ -15,9 +14,5 @@
   </div>
   <div id='loading'>
   </div>
-  <div id='selected'>
-    <h1>Explore supermarkets in the UK</h1>
-  </div>
-
   </h1>
 </div>
